# SubtitleConverter

./: CMakeLists.txt  README.md
include/: DynamicArray.h  SAMI.h  SRT.h  SSA.h  Structures.h  Subtitle.h  SubtitleFactory.h  TTML.h  WriteBehavior.h
src/: SAMI.cpp  SRT.cpp  SSA.cpp  TTML.cpp  main.cpp
test/: tests.cpp
